# pandas-accumulate

./: README.md  pyproject.toml
.github/workflows/: check.yml
pandas_accumulate/: __init__.py
tests/: test_basic.py
