[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pandas_accumulate"
authors = [{name = "Eike von Seggern", email = "eike@vonseggern.space"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
readme = "README.md"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
